兼容jdk11以上版本